# airflow-dev-mcp

./: .gitignore  LICENSE  README.md  RELEASING.md  airflow_mcp.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/airflow_dev_mcp/: __init__.py  models.py  server.py
tests/: conftest.py
tests/integration/: conftest.py  test_tools_integration.py
tests/integration/dags/af2/: broken_dag.py  hello_dag.py
tests/integration/dags/af3/: hello_dag.py
tests/unit/: conftest.py  test_auth.py  test_config.py  test_helpers.py  test_models.py  test_server_meta.py  test_tools.py
